--- a/arch/arm/boot/dts/exynos4412-tiny4412.dts
+++ b/arch/arm/boot/dts/exynos4412-tiny4412.dts
@@ -69,6 +69,14 @@
 			clock-frequency = <24000000>;
 		};
 	};
+
+        usb-hub {
+        	compatible = "smsc,usb4640";
+        	reset-gpios = <&gpm2 4 GPIO_ACTIVE_LOW>;
+        	initial-mode = <USB4640_MODE_HUB>;
+        };
+
+
 };
 
 &rtc {
@@ -95,5 +103,33 @@
 };
 
 &serial_3 {
+	status = "okay";
+};
+
+&exynos_usbphy {
+	status = "okay";
+};
+
+&ehci {
+	status = "okay";
+	port@0 {
+		status = "okay";
+	};
+	port@1 {
+		status = "okay";
+	};
+	port@2 {
+		status = "okay";
+	};
+};
+
+&ohci {
+	status = "okay";
+	port@0 {
+		status = "okay";
+	};
+};
+
+&hsotg {
 	status = "okay";
 };
