--- a/.config
+++ b/.config
@@ -1176,7 +1176,7 @@ CONFIG_USB_NET_CDCETHER=y
 CONFIG_USB_NET_CDC_NCM=y
 # CONFIG_USB_NET_HUAWEI_CDC_NCM is not set
 # CONFIG_USB_NET_CDC_MBIM is not set
-CONFIG_USB_NET_DM9601=y
+# CONFIG_USB_NET_DM9601 is not set
 # CONFIG_USB_NET_SR9700 is not set
 # CONFIG_USB_NET_SR9800 is not set
 CONFIG_USB_NET_SMSC75XX=y
@@ -2647,6 +2647,7 @@ CONFIG_USB_DWC2_DUAL_ROLE=y
 # CONFIG_USB_YUREX is not set
 # CONFIG_USB_EZUSB_FX2 is not set
 CONFIG_USB_HSIC_USB3503=y
+# CONFIG_USB_HSIC_USB4640 is not set
 # CONFIG_USB_LINK_LAYER_TEST is not set
 # CONFIG_USB_CHAOSKEY is not set
 
