--- a/drivers/usb/misc/Kconfig
+++ b/drivers/usb/misc/Kconfig
@@ -249,7 +249,7 @@ config USB_HSIC_USB3503
        help
          This option enables support for SMSC USB3503 HSIC to USB 2.0 Driver.
 
-config USB_HISC_USB4640
+config USB_HSIC_USB4640
 	tristate "USB4640 HSIC to USB20 Driver"
 	help
 	 This option enables support for SMSc USB4640 HSIC to USB 2.0 Driver.
