--- a/arch/arm/boot/dts/exynos4412-tiny4412.dts
+++ b/arch/arm/boot/dts/exynos4412-tiny4412.dts
@@ -71,12 +71,25 @@
 		};
 	};
 
-        usb-hub {
-        	compatible = "smsc,usb4640";
-        	reset-gpios = <&gpm2 4 GPIO_ACTIVE_LOW>;
-        	initial-mode = <USB4640_MODE_HUB>;
-        };
+    usb-hub {
+    	compatible = "smsc,usb4640";
+    	reset-gpios = <&gpm2 4 GPIO_ACTIVE_LOW>;
+    	initial-mode = <USB4640_MODE_HUB>;
+    };
 
+    regulators {
+    	compatible = "simple-bus";
+    	#address-cells = <1>;
+    	#size-cells = <0>;
+
+    	mmc_reg: regulator@0 {
+    		compatible = "regulator-fixed";
+    		reg = <0>;
+    		regulator-name = "VMEM_VDD_2.8V";
+    		regulator-min-microvolt = <2800000>;
+    		regulator-max-microvolt = <2800000>;
+    	};
+    };
 
 };
 
@@ -88,7 +101,8 @@
 	bus-width = <4>;
 	pinctrl-0 = <&sd2_clk &sd2_cmd &sd2_cd &sd2_bus4>;
 	pinctrl-names = "default";
-	status = "disable";
+	vmmc-supply = <&mmc_reg>;
+	status = "okay";
 };
 
 &serial_0 {
