fix last patch which is not include the CONFIG_USB_NET_DM9601 in tiny4412_defconfig

--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -828,6 +828,7 @@ CONFIG_I2C_ARB_GPIO_CHALLENGE=y
 CONFIG_SYSCTL=y
 CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
+CONFIG_USB_NET_DM9601=y
 CONFIG_HAVE_ARCH_TRACEHOOK=y
 CONFIG_NO_IOPORT_MAP=y
 CONFIG_NET_NS=y
