--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -263,6 +263,7 @@ CONFIG_NFS_V2=Y
 CONFIG_VIDEOBUF2_VMALLOC=M
 CONFIG_SND=Y
 CONFIG_I2C_ARB_GPIO_CHALLENGE=Y
+CONFIG_USB_NET_DM9601=Y
 CONFIG_CRAMFS=Y
 CONFIG_SND_TIMER=Y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=Y
