--- a/arch/arm/configs/tiny4412_defconfig
+++ b/arch/arm/configs/tiny4412_defconfig
@@ -63,6 +63,7 @@ CONFIG_NETDEVICES=y
 CONFIG_SMSC911X=y
 CONFIG_USB_RTL8152=y
 CONFIG_USB_USBNET=y
+CONFIG_USB_NET_DM9601=y
 CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_NET_SMSC95XX=y
 CONFIG_MWIFIEX=m
