--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -2,64 +2,114 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 4.4.0 Kernel Configuration
 #
+CONFIG_NF_CONNTRACK_H323=Y
+CONFIG_IP_NF_TARGET_REDIRECT=Y
 CONFIG_CRC32=Y
+CONFIG_NF_NAT_PROTO_SCTP=Y
 CONFIG_MFD_CROS_EC=Y
 CONFIG_BLK_DEV_DM=Y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=Y
+CONFIG_NF_CONNTRACK_NETBIOS_NS=Y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=Y
+CONFIG_HID_SPEEDLINK=Y
+CONFIG_USB_F_AUDIO_SRC=Y
+CONFIG_NETFILTER_XT_MATCH_HELPER=Y
+CONFIG_ASYMMETRIC_KEY_TYPE=Y
+CONFIG_NETFILTER_XT_MATCH_STATISTIC=Y
+CONFIG_UHID=Y
+CONFIG_IP_NF_NAT=Y
 CONFIG_KEYBOARD_CROS_EC=Y
-CONFIG_MOUSE_CYAPA=Y
+CONFIG_INET6_TUNNEL=Y
+CONFIG_HID_PRODIKEYS=Y
+CONFIG_HID_EMS_FF=Y
+CONFIG_IP6_NF_MANGLE=Y
 CONFIG_S3C2410_WATCHDOG=Y
 CONFIG_MFD_CROS_EC_SPI=Y
 CONFIG_IPV6=Y
-CONFIG_CRYPTO_AEAD=M
+CONFIG_CRYPTO_AEAD=Y
+CONFIG_NF_NAT_PROTO_GRE=Y
+CONFIG_IP6_NF_TARGET_REJECT=Y
 CONFIG_CPUFREQ_DT=Y
 CONFIG_SND_SOC_MAX98095=Y
 CONFIG_REGULATOR_MAX77802=Y
+CONFIG_NF_NAT_REDIRECT=Y
+CONFIG_USB_CONFIGFS=Y
 CONFIG_SERIAL_SAMSUNG=Y
-CONFIG_CRYPTO_DRBG_MENU=M
+CONFIG_XFRM_IPCOMP=Y
+CONFIG_CRYPTO_DRBG_MENU=Y
 CONFIG_CRYPTO_RNG2=Y
+CONFIG_NETFILTER_NETLINK_QUEUE=Y
 CONFIG_MSDOS_FS=Y
+CONFIG_TUN=Y
 CONFIG_CFG80211=Y
-CONFIG_DM_CRYPT=M
+CONFIG_DM_CRYPT=Y
 CONFIG_SERIAL_8250=Y
 CONFIG_LZO_DECOMPRESS=Y
 CONFIG_HID_BELKIN=Y
+CONFIG_HID_ACRUX=Y
 CONFIG_USB=Y
-CONFIG_CRYPTO_HMAC=M
-CONFIG_CRC_ITU_T=Y
-CONFIG_FRAMEBUFFER_CONSOLE=Y
+CONFIG_CRYPTO_HMAC=Y
+CONFIG_HID_LOGITECH_HIDPP=Y
+CONFIG_IP_NF_ARPTABLES=Y
 CONFIG_HID_CHERRY=Y
 CONFIG_BATTERY_MAX17040=Y
+CONFIG_HID_SUNPLUS=Y
+CONFIG_HID_PICOLCD=Y
 CONFIG_SND_SOC=Y
 CONFIG_FB_SYS_FILLRECT=Y
+CONFIG_HID_THRUSTMASTER=Y
+CONFIG_CRYPTO_AUTHENC=Y
 CONFIG_DRM_EXYNOS=Y
+CONFIG_HID_PRIMAX=Y
 CONFIG_DECOMPRESS_LZMA=Y
 CONFIG_INPUT_MOUSEDEV=Y
+CONFIG_CRYPTO_DES=Y
 CONFIG_NLS_CODEPAGE_437=Y
+CONFIG_NET_CLS_U32=Y
 CONFIG_EXPORTFS=Y
 CONFIG_SERIO=Y
 CONFIG_FB_SYS_IMAGEBLIT=Y
 CONFIG_SENSORS_LM90=Y
+CONFIG_NET_EMATCH_U32=Y
+CONFIG_DM_BUFIO=Y
 CONFIG_REGULATOR_TPS65090=Y
+CONFIG_NF_CONNTRACK_SANE=Y
 CONFIG_DRM_NXP_PTN3460=Y
+CONFIG_NF_CT_PROTO_DCCP=Y
 CONFIG_ZLIB_INFLATE=Y
 CONFIG_HWMON=Y
-CONFIG_USB_VIDEO_CLASS=M
+CONFIG_USB_VIDEO_CLASS=Y
 CONFIG_LOCKD=Y
+CONFIG_USB_F_FS=Y
+CONFIG_ANDROID_TIMED_GPIO=Y
+CONFIG_HID_SAITEK=Y
+CONFIG_NETFILTER_XT_MATCH_STRING=Y
 CONFIG_SENSORS_PWM_FAN=Y
 CONFIG_USB_STORAGE=Y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=Y
 CONFIG_I2C_MUX=Y
 CONFIG_HID_APPLE=Y
+CONFIG_IP_NF_ARP_MANGLE=Y
+CONFIG_NF_CONNTRACK_PPTP=Y
+CONFIG_NF_CONNTRACK_IRC=Y
+CONFIG_PPP_DEFLATE=Y
+CONFIG_TEXTSEARCH_KMP=Y
 CONFIG_USB_NET_NET1080=Y
+CONFIG_NETFILTER_XT_TARGET_CLASSIFY=Y
+CONFIG_HID_TIVO=Y
 CONFIG_REGMAP_SPI=Y
 CONFIG_SND_DMAENGINE_PCM=Y
+CONFIG_NETFILTER_XT_TARGET_NFQUEUE=Y
 CONFIG_NLS=Y
+CONFIG_NETFILTER_XT_TARGET_SECMARK=Y
+CONFIG_HID_MAGICMOUSE=Y
 CONFIG_I2C_GPIO=Y
+CONFIG_INPUT_GPIO=Y
 CONFIG_FB_SYS_COPYAREA=Y
 CONFIG_USB_COMMON=Y
+CONFIG_IP6_NF_IPTABLES=Y
 CONFIG_USB_HSIC_USB3503=Y
+CONFIG_HID_KEYTOUCH=Y
 CONFIG_HID_CYPRESS=Y
 CONFIG_DRM_KMS_HELPER=Y
 CONFIG_NLS_ISO8859_1=Y
@@ -67,46 +117,77 @@ CONFIG_CRYPTO_WORKQUEUE=Y
 CONFIG_HID_KENSINGTON=Y
 CONFIG_BACKLIGHT_GENERIC=Y
 CONFIG_USB_EHCI_HCD=Y
+CONFIG_TEXTSEARCH_BM=Y
+CONFIG_HID_ZYDACRON=Y
+CONFIG_PPP_MPPE=Y
 CONFIG_NET_KEY=Y
 CONFIG_IOSCHED_DEADLINE=Y
 CONFIG_IPV6_SIT=Y
 CONFIG_SND_SOC_SAMSUNG=Y
+CONFIG_IP_NF_TARGET_MASQUERADE=Y
+CONFIG_NF_CONNTRACK_BROADCAST=Y
 CONFIG_PHY_EXYNOS_MIPI_VIDEO=Y
+CONFIG_NF_NAT_PROTO_DCCP=Y
 CONFIG_I2C_EXYNOS5=Y
 CONFIG_BACKLIGHT_CLASS_DEVICE=Y
-CONFIG_CRYPTO_NULL=M
+CONFIG_CRYPTO_NULL=Y
+CONFIG_NF_DEFRAG_IPV4=Y
 CONFIG_INET_XFRM_MODE_BEET=Y
-CONFIG_CRYPTO_JITTERENTROPY=M
+CONFIG_HID_LCPOWER=Y
+CONFIG_CRYPTO_DEFLATE=Y
+CONFIG_CRYPTO_JITTERENTROPY=Y
+CONFIG_NETFILTER_NETLINK_LOG=Y
 CONFIG_CROS_EC_CHARDEV=Y
 CONFIG_MFD_CROS_EC_I2C=Y
+CONFIG_NETFILTER_XT_MATCH_MARK=Y
+CONFIG_IP_NF_MANGLE=Y
 CONFIG_RTC_DRV_S5M=Y
 CONFIG_INET6_XFRM_MODE_TUNNEL=Y
-CONFIG_MEDIA_SUPPORT=M
+CONFIG_MEDIA_SUPPORT=Y
+CONFIG_IP_NF_FILTER=Y
+CONFIG_HID_ZEROPLUS=Y
 CONFIG_EXT3_FS=Y
+CONFIG_NETFILTER_XT_MATCH_LENGTH=Y
 CONFIG_FAT_FS=Y
+CONFIG_TEXTSEARCH_FSM=Y
+CONFIG_IP6_NF_RAW=Y
 CONFIG_INET_TUNNEL=Y
 CONFIG_ROMFS_FS=Y
 CONFIG_IOSCHED_CFQ=Y
+CONFIG_OID_REGISTRY=Y
 CONFIG_MFD_CORE=Y
 CONFIG_RTC_DRV_S3C=Y
 CONFIG_RTC_DRV_MAX77686=Y
+CONFIG_PUBLIC_KEY_ALGO_RSA=Y
 CONFIG_USB_OHCI_HCD=Y
-CONFIG_USB_GSPCA=M
+CONFIG_USB_GSPCA=Y
 CONFIG_NLS_ASCII=Y
+CONFIG_NF_REJECT_IPV4=Y
 CONFIG_REGULATOR_MAX14577=Y
 CONFIG_USB_NET_CDC_SUBSET=Y
-CONFIG_CRYPTO_RNG=M
-CONFIG_VIDEOBUF2_MEMOPS=M
+CONFIG_QFMT_V2=Y
+CONFIG_NETFILTER_XT_MATCH_CONNMARK=Y
+CONFIG_CRYPTO_RNG=Y
+CONFIG_VIDEOBUF2_MEMOPS=Y
+CONFIG_HID_ROCCAT=Y
 CONFIG_PWM_SAMSUNG=Y
 CONFIG_INET_XFRM_MODE_TRANSPORT=Y
+CONFIG_CRYPTO_MD5=Y
 CONFIG_DRM_PANEL_SAMSUNG_S6E8AA0=Y
+CONFIG_INET6_AH=Y
 CONFIG_REGULATOR_FIXED_VOLTAGE=Y
-CONFIG_CRYPTO_ECHAINIV=M
+CONFIG_NETFILTER_XT_MARK=Y
+CONFIG_NETFILTER_XTABLES=Y
+CONFIG_CRYPTO_ECHAINIV=Y
 CONFIG_BL_SWITCHER_DUMMY_IF=Y
+CONFIG_HID_GREENASIA=Y
+CONFIG_HID_GYRATION=Y
 CONFIG_SERIAL_OF_PLATFORM=Y
+CONFIG_NETFILTER_XT_TARGET_TPROXY=Y
 CONFIG_COMMON_CLK_S2MPS11=Y
 CONFIG_CRC16=Y
 CONFIG_USB_NET_AX8817X=Y
+CONFIG_USB_F_ACC=Y
 CONFIG_COMMON_CLK_MAX77802=Y
 CONFIG_DRM_PARADE_PS8622=Y
 CONFIG_REGMAP_I2C=Y
@@ -114,10 +195,12 @@ CONFIG_INPUT_MATRIXKMAP=Y
 CONFIG_HW_RANDOM_TPM=Y
 CONFIG_USB_HID=Y
 CONFIG_PHY_EXYNOS_DP_VIDEO=Y
-CONFIG_USB_F_RNDIS=Y
+CONFIG_USB_F_MIDI=Y
 CONFIG_CRYPTO_PCOMP2=Y
 CONFIG_SMSC911X=Y
 CONFIG_KEYBOARD_GPIO=Y
+CONFIG_NF_CONNTRACK_FTP=Y
+CONFIG_IP_NF_MATCH_ECN=Y
 CONFIG_USB_GADGET=Y
 CONFIG_SOUND=Y
 CONFIG_UNIX=Y
@@ -125,14 +208,18 @@ CONFIG_USB_NET_DRIVERS=Y
 CONFIG_CRYPTO_HASH2=Y
 CONFIG_NFS_FS=Y
 CONFIG_USB_NET_SMSC95XX=Y
+CONFIG_INET_ESP=Y
 CONFIG_LZ4_DECOMPRESS=Y
-CONFIG_FONT_SUPPORT=Y
+CONFIG_NF_CONNTRACK_IPV6=Y
 CONFIG_CRYPTO_ALGAPI=Y
 CONFIG_DRM_PANEL_SIMPLE=Y
+CONFIG_TABLET_USB_GTCO=Y
+CONFIG_INPUT_UINPUT=Y
 CONFIG_CHARGER_TPS65090=Y
 CONFIG_SND_SOC_SNOW=Y
 CONFIG_KEYBOARD_ATKBD=Y
 CONFIG_NET_IP_TUNNEL=Y
+CONFIG_NF_NAT=Y
 CONFIG_LEDS_PWM=Y
 CONFIG_BATTERY_SBS=Y
 CONFIG_CRYPTO_HASH=Y
@@ -142,162 +229,271 @@ CONFIG_VFAT_FS=Y
 CONFIG_REGULATOR_S2MPS11=Y
 CONFIG_USB_LIBCOMPOSITE=Y
 CONFIG_BLK_DEV_LOOP=Y
+CONFIG_NF_NAT_IRC=Y
 CONFIG_CRYPTO_CBC=Y
 CONFIG_REGULATOR_MAX77686=Y
 CONFIG_FS_MBCACHE=Y
-CONFIG_CRYPTO_RNG_DEFAULT=M
+CONFIG_CRYPTO_RNG_DEFAULT=Y
+CONFIG_NF_NAT_TFTP=Y
 CONFIG_CHARGER_MAX14577=Y
 CONFIG_TOUCHSCREEN_PROPERTIES=Y
+CONFIG_NETFILTER_XT_TARGET_REDIRECT=Y
 CONFIG_CRYPTO_MANAGER2=Y
+CONFIG_MEMORY_STATE_TIME=Y
 CONFIG_CONFIGFS_FS=Y
 CONFIG_I2C=Y
 CONFIG_BINFMT_SCRIPT=Y
+CONFIG_CRYPTO_ECB=Y
 CONFIG_REGULATOR_MAX77693=Y
+CONFIG_NF_CONNTRACK_AMANDA=Y
 CONFIG_FB_CFB_IMAGEBLIT=Y
+CONFIG_ZLIB_DEFLATE=Y
 CONFIG_SUNRPC=Y
 CONFIG_FW_LOADER=Y
 CONFIG_DECOMPRESS_XZ=Y
+CONFIG_NETFILTER_XT_MATCH_PKTTYPE=Y
 CONFIG_MII=Y
 CONFIG_REGULATOR_MAX8997=Y
 CONFIG_EXT4_FS=Y
+CONFIG_CRYPTO_SHA1=Y
 CONFIG_XZ_DEC=Y
 CONFIG_BATTERY_MAX17042=Y
+CONFIG_SND_RAWMIDI=Y
+CONFIG_PPPOPNS=Y
+CONFIG_IP_NF_MATCH_TTL=Y
+CONFIG_NETFILTER_XT_TARGET_TRACE=Y
 CONFIG_SND_PCM=Y
-CONFIG_USB_U_ETHER=Y
+CONFIG_NETFILTER_XT_MATCH_COMMENT=Y
 CONFIG_INPUT_EVDEV=Y
+CONFIG_NETFILTER_XT_TARGET_TCPMSS=Y
 CONFIG_EXT2_FS=Y
+CONFIG_HID_DRAGONRISE=Y
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=Y
+CONFIG_QUOTA_TREE=Y
+CONFIG_MPILIB=Y
 CONFIG_USB_NET_CDCETHER=Y
 CONFIG_PACKET=Y
 CONFIG_XFRM_ALGO=Y
 CONFIG_PL330_DMA=Y
 CONFIG_CRYPTO_AKCIPHER2=Y
-CONFIG_MWIFIEX_SDIO=M
+CONFIG_MWIFIEX_SDIO=Y
+CONFIG_NETFILTER_XT_MATCH_IPRANGE=Y
+CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=Y
 CONFIG_USB_XHCI_PLATFORM=Y
+CONFIG_NF_CONNTRACK_TFTP=Y
 CONFIG_NFS_V3=Y
 CONFIG_SPI_S3C64XX=Y
-CONFIG_USB_F_SUBSET=Y
 CONFIG_LCD_PLATFORM=Y
+CONFIG_REED_SOLOMON=Y
 CONFIG_USB_NET_SMSC75XX=Y
+CONFIG_HID_WACOM=Y
+CONFIG_NETFILTER_XT_MATCH_POLICY=Y
 CONFIG_CRYPTO_AES=Y
 CONFIG_MMC_DW=Y
+CONFIG_NETFILTER_XT_NAT=Y
+CONFIG_HID_WALTOP=Y
+CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=Y
 CONFIG_SERIO_SERPORT=Y
 CONFIG_INET_XFRM_MODE_TUNNEL=Y
 CONFIG_HW_RANDOM_EXYNOS=Y
+CONFIG_PSTORE_RAM=Y
 CONFIG_CPU_FREQ_STAT=Y
+CONFIG_NETFILTER_XT_TARGET_NETMAP=Y
+CONFIG_INET6_ESP=Y
 CONFIG_I2C_S3C2410=Y
 CONFIG_SND_SOC_MAX98090=Y
+CONFIG_IP6_NF_FILTER=Y
 CONFIG_IIO=Y
 CONFIG_SERIO_LIBPS2=Y
 CONFIG_EXYNOS_ADC=Y
+CONFIG_HID_TWINHAN=Y
 CONFIG_SENSORS_NTC_THERMISTOR=Y
 CONFIG_USB_DWC2=Y
 CONFIG_SND_SOC_ODROIDX2=Y
+CONFIG_DM_VERITY=Y
+CONFIG_NETFILTER_XT_MATCH_ECN=Y
 CONFIG_RFKILL_REGULATOR=Y
+CONFIG_NF_NAT_MASQUERADE_IPV4=Y
 CONFIG_DECOMPRESS_LZ4=Y
+CONFIG_NETFILTER_XT_MATCH_TIME=Y
+CONFIG_NETFILTER_XT_MATCH_MAC=Y
+CONFIG_NETFILTER_XT_TARGET_NFLOG=Y
+CONFIG_LIBCRC32C=Y
 CONFIG_CRYPTO_SHA256=Y
 CONFIG_SND_SAMSUNG_I2S=Y
 CONFIG_INET_TCP_DIAG=Y
+CONFIG_HID_SONY=Y
+CONFIG_USB_F_MTP=Y
 CONFIG_HID_MONTEREY=Y
 CONFIG_HID_EZKEY=Y
 CONFIG_BACKLIGHT_PWM=Y
 CONFIG_CRYPTO=Y
+CONFIG_IP_NF_IPTABLES=Y
 CONFIG_USB_XHCI_HCD=Y
+CONFIG_HID_SAMSUNG=Y
 CONFIG_PHY_EXYNOS5250_SATA=Y
 CONFIG_SCSI_MOD=Y
 CONFIG_I2C_CROS_EC_TUNNEL=Y
 CONFIG_CRYPTO_CRC32C=Y
 CONFIG_SERIAL_CORE=Y
+CONFIG_FUSE_FS=Y
 CONFIG_HID_MICROSOFT=Y
-CONFIG_VIDEO_DEV=M
+CONFIG_NF_DEFRAG_IPV6=Y
+CONFIG_VIDEO_DEV=Y
 CONFIG_INPUT_LEDS=Y
+CONFIG_NF_CT_PROTO_SCTP=Y
 CONFIG_SCSI=Y
 CONFIG_FB_CFB_FILLRECT=Y
+CONFIG_NF_NAT_PPTP=Y
 CONFIG_HID_CHICONY=Y
 CONFIG_HID=Y
 CONFIG_JBD2=Y
 CONFIG_USB_DWC3_EXYNOS=Y
+CONFIG_INET6_IPCOMP=Y
 CONFIG_PHYLIB=Y
 CONFIG_REGULATOR_GPIO=Y
+CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=Y
+CONFIG_IP_NF_SECURITY=Y
+CONFIG_IP_NF_RAW=Y
+CONFIG_IP_NF_ARPFILTER=Y
+CONFIG_NETFILTER_XT_MATCH_SOCKET=Y
+CONFIG_HID_TOPSEED=Y
 CONFIG_DECOMPRESS_BZIP2=Y
+CONFIG_NF_NAT_H323=Y
 CONFIG_HID_A4TECH=Y
+CONFIG_IP_NF_TARGET_NETMAP=Y
+CONFIG_NF_REJECT_IPV6=Y
+CONFIG_INPUT_FF_MEMLESS=Y
 CONFIG_CHR_DEV_SG=Y
+CONFIG_NF_NAT_AMANDA=Y
 CONFIG_SENSORS_INA2XX=Y
 CONFIG_MMC_DW_PLTFM=Y
 CONFIG_INET6_XFRM_MODE_TRANSPORT=Y
+CONFIG_CRYPTO_ARC4=Y
 CONFIG_COMMON_CLK_MAX77686=Y
 CONFIG_GRACE_PERIOD=Y
+CONFIG_SLHC=Y
 CONFIG_CRYPTO_MANAGER=Y
 CONFIG_PHY_SAMSUNG_USB2=Y
+CONFIG_NET_SCH_HTB=Y
+CONFIG_PPP_BSDCOMP=Y
+CONFIG_HID_ORTEK=Y
+CONFIG_NETFILTER_XT_TARGET_MARK=Y
 CONFIG_I2C_ALGOBIT=Y
 CONFIG_MMC_BLOCK=Y
 CONFIG_SND_SIMPLE_CARD=Y
 CONFIG_MMC_DW_EXYNOS=Y
+CONFIG_PKCS7_MESSAGE_PARSER=Y
 CONFIG_USB_EHCI_EXYNOS=Y
 CONFIG_USB_NET_CDC_NCM=Y
 CONFIG_HID_GENERIC=Y
-CONFIG_USB_ETH=Y
 CONFIG_ARM_EXYNOS5440_CPUFREQ=Y
 CONFIG_MMC=Y
 CONFIG_LZO_COMPRESS=Y
 CONFIG_HID_LOGITECH=Y
 CONFIG_EXTCON=Y
-CONFIG_CRYPTO_DRBG=M
+CONFIG_PPPOLAC=Y
+CONFIG_NETFILTER_XT_TARGET_IDLETIMER=Y
+CONFIG_CRYPTO_DRBG=Y
 CONFIG_USB_RTL8152=Y
+CONFIG_NETFILTER_XT_MATCH_U32=Y
+CONFIG_TABLET_USB_KBTAB=Y
+CONFIG_IPV6_MIP6=Y
 CONFIG_TCP_CONG_CUBIC=Y
 CONFIG_MMC_SDHCI=Y
+CONFIG_NETFILTER_XT_CONNMARK=Y
+CONFIG_HID_KYE=Y
+CONFIG_IP_NF_MATCH_AH=Y
+CONFIG_ASN1=Y
+CONFIG_NETFILTER_XT_MATCH_LIMIT=Y
 CONFIG_FB_SYS_FOPS=Y
 CONFIG_FB=Y
 CONFIG_THERMAL=Y
+CONFIG_HID_PETALYNX=Y
+CONFIG_NF_CONNTRACK_IPV4=Y
 CONFIG_RTC_DRV_MAX77802=Y
 CONFIG_USB_NET_ZAURUS=Y
+CONFIG_INET6_XFRM_TUNNEL=Y
 CONFIG_USB_NET_AX88179_178A=Y
 CONFIG_MMC_SDHCI_S3C=Y
+CONFIG_TABLET_USB_ACECAD=Y
 CONFIG_BLK_DEV_CRYPTOLOOP=Y
+CONFIG_INPUT_KEYCHORD=Y
+CONFIG_HID_LOGITECH_DJ=Y
 CONFIG_PHY_EXYNOS5_USBDRD=Y
+CONFIG_NF_NAT_PROTO_UDPLITE=Y
 CONFIG_HW_RANDOM=Y
+CONFIG_NF_NAT_IPV4=Y
 CONFIG_OF_MDIO=Y
-CONFIG_VIDEOBUF2_CORE=M
+CONFIG_VIDEOBUF2_CORE=Y
 CONFIG_CRYPTO_NULL2=Y
 CONFIG_CRYPTO_BLKCIPHER2=Y
 CONFIG_NFS_V2=Y
-CONFIG_VIDEOBUF2_VMALLOC=M
+CONFIG_VIDEOBUF2_VMALLOC=Y
+CONFIG_HID_PANTHERLORD=Y
 CONFIG_SND=Y
+CONFIG_TABLET_USB_HANWANG=Y
 CONFIG_I2C_ARB_GPIO_CHALLENGE=Y
+CONFIG_USB_F_PTP=Y
 CONFIG_USB_NET_DM9601=Y
+CONFIG_XFRM_USER=Y
 CONFIG_CRAMFS=Y
+CONFIG_HID_MULTITOUCH=Y
+CONFIG_NETFILTER_XT_MATCH_QUOTA2=Y
+CONFIG_HID_ELECOM=Y
 CONFIG_SND_TIMER=Y
+CONFIG_NETFILTER_XT_TARGET_CONNMARK=Y
+CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=Y
+CONFIG_PPP=Y
+CONFIG_NETFILTER_XT_MATCH_QUOTA=Y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=Y
 CONFIG_INET_DIAG=Y
+CONFIG_PSTORE=Y
+CONFIG_NF_NAT_FTP=Y
+CONFIG_NF_CT_PROTO_UDPLITE=Y
 CONFIG_USB_DWC3=Y
-CONFIG_INET_LRO=Y
 CONFIG_EXTCON_MAX14577=Y
+CONFIG_HID_UCLOGIC=Y
 CONFIG_LEDS_GPIO=Y
 CONFIG_BLK_DEV_RAM=Y
+CONFIG_NETFILTER_XT_MATCH_STATE=Y
 CONFIG_REGULATOR_S5M8767=Y
 CONFIG_DRM=Y
 CONFIG_INET6_XFRM_MODE_BEET=Y
 CONFIG_FB_CFB_COPYAREA=Y
-CONFIG_USB_F_ECM=Y
 CONFIG_EXYNOS_THERMAL=Y
-CONFIG_MWIFIEX=M
-CONFIG_VIDEO_V4L2=M
+CONFIG_MWIFIEX=Y
+CONFIG_VIDEO_V4L2=Y
+CONFIG_HID_NTRIG=Y
 CONFIG_DECOMPRESS_GZIP=Y
 CONFIG_DECOMPRESS_LZO=Y
 CONFIG_I2C_CHARDEV=Y
 CONFIG_REGMAP_MMIO=Y
+CONFIG_HID_HOLTEK=Y
 CONFIG_KEYBOARD_SAMSUNG=Y
+CONFIG_JOYSTICK_XPAD=Y
 CONFIG_USB_USBNET=Y
+CONFIG_HID_SMARTJOYPLUS=Y
 CONFIG_CRC_CCITT=Y
 CONFIG_BLK_DEV_SD=Y
+CONFIG_NETFILTER_NETLINK=Y
 CONFIG_BITREVERSE=Y
+CONFIG_X509_CERTIFICATE_PARSER=Y
 CONFIG_CRYPTO_BLKCIPHER=Y
 CONFIG_EXTCON_MAX77693=Y
+CONFIG_NF_CONNTRACK=Y
 CONFIG_LCD_CLASS_DEVICE=Y
 CONFIG_SND_SOC_I2C_AND_SPI=Y
+CONFIG_IP_NF_TARGET_REJECT=Y
 CONFIG_LEDS_CLASS=Y
 CONFIG_CHARGER_MAX77693=Y
+CONFIG_NF_CT_PROTO_GRE=Y
 CONFIG_REGULATOR_S2MPA01=Y
+CONFIG_NF_CT_NETLINK=Y
+CONFIG_HID_WIIMOTE=Y
 CONFIG_CRYPTO_AEAD2=Y
+CONFIG_NETFILTER_XT_MATCH_HL=Y
 CONFIG_CRYPTO_ALGAPI2=Y
 CONFIG_INPUT=Y
+CONFIG_TABLET_USB_AIPTEK=Y
 CONFIG_USB_OHCI_EXYNOS=Y
