add the driver code to linux but there are some bug, the kernel boot fail

--- a/.config
+++ b/.config
@@ -3804,6 +3804,16 @@ CONFIG_ANDROID_BINDER_IPC_32BIT=y
 # FPGA Configuration Support
 #
 # CONFIG_FPGA is not set
+CONFIG_TINY4412_DRIVER=y
+CONFIG_TINY4412_ADC=y
+CONFIG_TINY4412_BACKLIGHT=y
+CONFIG_TINY4412_EEPROM=y
+CONFIG_TINY4412_INTERRUPT=y
+CONFIG_TINY4412_LCD=y
+CONFIG_TINY4412_LED=y
+CONFIG_TINY4412_PWM=y
+CONFIG_TINY4412_TOUCH=y
+CONFIG_TINY4412_WDT=y
 
 #
 # Firmware Drivers
