--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -34,6 +34,7 @@ CONFIG_XZ_DEC_IA64=y
 CONFIG_INOTIFY_USER=y
 CONFIG_NF_CONNTRACK_NETBIOS_NS=y
 CONFIG_HDMI=y
+CONFIG_TINY4412_LCD=y
 CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_EXYNOS_CPU_SUSPEND=y
@@ -82,6 +83,7 @@ CONFIG_USB_CONFIGFS_F_PTP=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_DEVTMPFS=y
+CONFIG_TINY4412_WDT=y
 CONFIG_NF_NAT_PROTO_GRE=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_IP6_NF_TARGET_REJECT=y
@@ -249,6 +251,7 @@ CONFIG_LOGIWHEELS_FF=y
 CONFIG_CLKSRC_OF=y
 CONFIG_PANTHERLORD_FF=y
 CONFIG_PM=y
+CONFIG_TINY4412_ADC=y
 CONFIG_SPI=y
 CONFIG_SERIAL_SAMSUNG_DEBUG=y
 CONFIG_RTC_SYSTOHC_DEVICE="rtc0"
@@ -363,6 +366,7 @@ CONFIG_THERMAL_EMULATION=y
 CONFIG_PGTABLE_LEVELS=2
 CONFIG_MFD_CROS_EC_I2C=y
 CONFIG_NETFILTER_XT_MATCH_MARK=y
+CONFIG_TINY4412_DRIVER=y
 CONFIG_ARM_VIRT_EXT=y
 CONFIG_SPARSE_IRQ=y
 CONFIG_IP_NF_MANGLE=y
@@ -404,6 +408,7 @@ CONFIG_SERIAL_EARLYCON=y
 CONFIG_CPU_FREQ=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_GSPCA=y
+CONFIG_TINY4412_EEPROM=y
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_NLS_ASCII=y
 CONFIG_NF_REJECT_IPV4=y
@@ -544,6 +549,7 @@ CONFIG_XPS=y
 CONFIG_SOC_EXYNOS4412=y
 CONFIG_INET_ESP=y
 CONFIG_SECURITY_SELINUX_DEVELOP=y
+CONFIG_TINY4412_LED=y
 CONFIG_LZ4_DECOMPRESS=y
 CONFIG_NF_CONNTRACK_IPV6=y
 CONFIG_ADVISE_SYSCALLS=y
@@ -723,6 +729,7 @@ CONFIG_MFD_MAX8997=y
 CONFIG_NOP_TRACER=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_INET=y
+CONFIG_TINY4412_PWM=y
 CONFIG_XZ_DEC_POWERPC=y
 CONFIG_IP_PNP_BOOTP=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
@@ -733,6 +740,7 @@ CONFIG_LCD_PLATFORM=y
 CONFIG_NET_CLS_ACT=y
 CONFIG_REED_SOLOMON=y
 CONFIG_USB_NET_SMSC75XX=y
+CONFIG_TINY4412_TOUCH=y
 CONFIG_HID_WACOM=y
 CONFIG_RTC_LIB=y
 CONFIG_NETFILTER_XT_MATCH_POLICY=y
@@ -890,6 +898,7 @@ CONFIG_HID=y
 CONFIG_USB_DWC3_DUAL_ROLE=y
 CONFIG_USB_ARMLINUX=y
 CONFIG_CLKDEV_LOOKUP=y
+CONFIG_TINY4412_BACKLIGHT=y
 CONFIG_JBD2=y
 CONFIG_USB_DWC3_EXYNOS=y
 CONFIG_INET6_IPCOMP=y
@@ -1138,6 +1147,7 @@ CONFIG_OF_FLATTREE=y
 CONFIG_TRACING_SUPPORT=y
 CONFIG_ARM_APPENDED_DTB=y
 CONFIG_UNIX98_PTYS=y
+CONFIG_TINY4412_INTERRUPT=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_SECURITY_SELINUX=y
